--- a/components/esp_system/port/soc/esp32s2/CMakeLists.txt
+++ b/components/esp_system/port/soc/esp32s2/CMakeLists.txt
@@ -2,6 +2,7 @@ set(srcs "async_memcpy_impl_cp_dma.c"
          "dport_panic_highint_hdl.S"
          "clk.c"
          "reset_reason.c"
+         "system_internal.c"
          "cache_err_int.c"
          "../../arch/xtensa/panic_arch.c"
          "../../arch/xtensa/panic_handler_asm.S"
