--- a/components/esp_system/port/soc/esp32s3/CMakeLists.txt
+++ b/components/esp_system/port/soc/esp32s3/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(srcs "dport_panic_highint_hdl.S"
          "clk.c"
          "reset_reason.c"
+         "system_internal.c"
          "cache_err_int.c"
          "../../async_memcpy_impl_gdma.c"
          "../../arch/xtensa/panic_arch.c"
