esp32: move brownout and cache err int setup

--- a/components/esp_system/port/soc/esp32c3/CMakeLists.txt
+++ b/components/esp_system/port/soc/esp32c3/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(srcs "clk.c"
          "reset_reason.c"
+         "cache_err_int.c"
          "../../async_memcpy_impl_gdma.c"
          "apb_backup_dma.c"
          "../../arch/riscv/expression_with_stack.c"
