--- a/components/esp_system/port/CMakeLists.txt
+++ b/components/esp_system/port/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_include_directories(${COMPONENT_LIB} PRIVATE include .)
+target_include_directories(${COMPONENT_LIB} PRIVATE include . PUBLIC soc)
 
 set(srcs "cpu_start.c" "panic_handler.c" "brownout.c")
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" ${srcs})
