--- a/components/esp_hw_support/CMakeLists.txt
+++ b/components/esp_hw_support/CMakeLists.txt
@@ -17,6 +17,11 @@ if(NOT BOOTLOADER_BUILD)
                      "mac_addr.c"
                      "sleep_modes.c")
      list(APPEND priv_requires esp_ipc)
+
+     if(NOT CMAKE_BUILD_EARLY_EXPANSION)
+          set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/sleep_modes.c" PROPERTIES
+                                      COMPILE_FLAGS "-fno-jump-tables -fno-tree-switch-conversion")
+     endif()
 endif()
 
 idf_component_register(SRCS ${srcs}
