--- a/components/esp_rom/esp32c3/Kconfig.soc_caps.in
+++ b/components/esp_rom/esp32c3/Kconfig.soc_caps.in
@@ -38,3 +38,7 @@ config ESP_ROM_GET_CLK_FREQ
 config ESP_ROM_NEEDS_SWSETUP_WORKAROUND
     bool
     default y
+
+config ESP_ROM_HAS_ETS_PRINTF_BUG
+    bool
+    default y
