--- a/components/esp_rom/esp32s3/Kconfig.soc_caps.in
+++ b/components/esp_rom/esp32s3/Kconfig.soc_caps.in
@@ -46,3 +46,7 @@ config ESP_ROM_HAS_HAL_WDT
 config ESP_ROM_NEEDS_SWSETUP_WORKAROUND
     bool
     default y
+
+config ESP_ROM_HAS_ETS_PRINTF_BUG
+    bool
+    default y
