--- a/wpa_supplicant/Kconfig
+++ b/wpa_supplicant/Kconfig
@@ -1,15 +1,13 @@
-menuconfig WPA_SUPPLICANT
-    bool "IEEE 802.11 supplicant code"
-	default n
-	depends on NET && DRIVERS_WIRELESS
-	---help---
-		wpa_supplicant will run as a daemon for wpa auth.
-
-if WPA_SUPPLICANT
+menu "Supplicant"
 
     config WPA_MBEDTLS_CRYPTO
         bool "Use MbedTLS crypto APIs"
         default y
+        select MBEDTLS_AES_C
+        select MBEDTLS_ECP_C
+        select MBEDTLS_ECDH_C
+        select MBEDTLS_ECDSA_C
+        select MBEDTLS_TLS_ENABLED
         help
             Select this option to use MbedTLS crypto APIs which utilize hardware acceleration.
 
@@ -17,6 +15,7 @@ if WPA_SUPPLICANT
         config WPA_MBEDTLS_TLS_CLIENT
             bool "Use MbedTLS TLS client for WiFi Enterprise connection"
             default y
+            select MBEDTLS_TLS_ENABLED
             help
                 Select this option to use MbedTLS TLS client for WPA2 enterprise connection.
                 Please note that from MbedTLS-3.0 onwards, MbedTLS does not support SSL-3.0
@@ -119,4 +118,4 @@ if WPA_SUPPLICANT
         help
             Select this option to enable WPS registrar support in softAP mode.
 
-endif
+endmenu
