--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "esp-mbedtls/mbedtls"]
 	path = esp-mbedtls/mbedtls
 	url = https://github.com/espressif/mbedtls.git
+[submodule "libs"]
+	path = libs
+	url = https://github.com/espressif/esp32-wifi-lib.git
