--- a/components/soc/esp32s3/include/soc/Kconfig.soc_caps.in
+++ b/components/soc/esp32s3/include/soc/Kconfig.soc_caps.in
@@ -1079,6 +1079,10 @@ config SOC_BLE_MESH_SUPPORTED
     bool
     default y
 
+config SOC_BLE_50_SUPPORTED
+    bool
+    default y
+
 config SOC_TWAI_BRP_MIN
     int
     default 2
