--- a/components/esp_hw_support/port/esp32c2/CMakeLists.txt
+++ b/components/esp_hw_support/port/esp32c2/CMakeLists.txt
@@ -7,6 +7,12 @@ set(srcs "rtc_clk_init.c"
          "chip_info.c"
          )
 
+if(NOT BOOTLOADER_BUILD)
+
+    list(APPEND srcs "sar_periph_ctrl.c")
+
+endif()
+
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" "${srcs}")
 
 target_sources(${COMPONENT_LIB} PRIVATE "${srcs}")
