--- a/components/esp_hw_support/port/esp32s2/CMakeLists.txt
+++ b/components/esp_hw_support/port/esp32s2/CMakeLists.txt
@@ -15,7 +15,8 @@ if(NOT BOOTLOADER_BUILD)
     list(APPEND srcs "memprot.c"
                      "esp_hmac.c"
                      "esp_crypto_lock.c"
-                     "esp_ds.c")
+                     "esp_ds.c"
+                     "sar_periph_ctrl.c")
 
     # init constructor for wifi
     list(APPEND srcs "adc2_init_cal.c")
